kube/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: ers-mysql-svc
  namespace: ers
  labels:
    app: ers
    tier: data
spec:
  ports:
    - port: 3306
      name: mysql-svc-port
      targetPort: ers-mysql-port
  selector:
    app: ers
    tier: data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ers-mysql-deploy
  namespace: ers
  labels:
    app: ers
    tier: data
spec:
  selector:
    matchLabels:
      app: ers
      tier: data
  template:
    metadata:
      name: ers-mysql-deploy
      namespace: ers
      labels:
        app: ers
        tier: data
    spec:
      containers:
        - name: ers-mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
              name: ers-mysql-port
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-persistent-storage
          readinessProbe:
            exec:
              command:
                - bash
                - "-c"
                - |
                  mysql -u ${MYSQL_USER} --password=${MYSQL_PASSWORD} -e 'SELECT 1'
            successThreshold: 1
            failureThreshold: 5
            periodSeconds: 10
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: ers-mysql-pvc
