kube/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: ers-server-svc
  namespace: ers
  labels:
    app: ers
    tier: service
spec:
  ports:
    - port: 8080
      name: server-svc-port
      targetPort: ers-server-port
  selector:
    app: ers
    tier: service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ers-server-deploy
  namespace: ers
  labels:
    app: ers
    tier: service
spec:
  selector:
    matchLabels:
      app: ers
      tier: service
  template:
    metadata:
      name: ers-server-deploy
      namespace: ers
      labels:
        app: ers
        tier: service
    spec:
      containers:
        - name: ers-server
          image: ers-server
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: ers-server-port
              protocol: TCP
          readinessProbe:
            httpGet:
              port: 8080
              path: /healthz
            initialDelaySeconds: 10
            periodSeconds: 15
            successThreshold: 1
            failureThreshold: 5
          volumeMounts:
            - mountPath: /etc/ers/security.json
              name: server-config
              subPath: security.json
            - mountPath: /usr/local/keys
              readOnly: true
              name: server-keys
      volumes:
        - name: server-config
          configMap:
            name: server-config
            items:
              - key: security.json
                path: security.json
        - name: server-keys
          secret:
            secretName: ers-keys
